test/error/parse/ExpectColon.mod
MODULE ExpectColon;
VAR x INTEGER;
END ExpectColon.
